tests/More/Bad/32.tig
/* error hi expr is not int.  */
for i := 10 to " " do
  print ("Tiger\n")
